<resources>
    <string name="app_name">Suntimes NFC Alarms</string>
    <string name="app_desc">An NFC Addon for Suntimes Alarms.</string>
    <string name="app_legal1"><![CDATA[
        <b>Source Code:</b><br />
        Copyright &#169 2022 Forrest Guice <br />
        Source code available under GPLv3.
    ]]></string>
    <string name="app_version"><![CDATA[<b>Version:</b>]]> %s</string>
    <string name="app_provider_version"><![CDATA[<b>Suntimes:</b>]]> %s</string>

    <string name="app_support_url"><![CDATA[
        <b>Support:</b> visit the
        <a href="https://github.com/forrestguice/TODO/issues">issue tracker</a> to submit a request.
    ]]></string>    <!-- formatted link -->   <!-- TODO -->
    <string name="app_source_url"><![CDATA[
        <a href="https://github.com/forrestguice/IntervalMidpoints/">github.com/forrestguice/TODO/</a>
    ]]></string>    <!-- formatted link -->   <!-- TODO -->
    <string name="app_changelog_url">https://github.com/forrestguice/TODO/blob/master/CHANGELOG.md</string>   <!-- url only (no formatting) -->   <!-- TODO -->
    <string name="app_commit_url">https://github.com/forrestguice/TODO/commit/</string>   <!-- url only (no formatting) -->  <!-- TODO -->

    <string name="format_help"><![CDATA[%s<br/><br/>%s]]></string>
    <string-array name="help_topics">      <!-- in order of appearance -->
        <item>@string/help_addon</item>
        <item>@string/help_configuration</item>
    </string-array>
    <string name="help_addon"><![CDATA[An add-on for Suntimes Alarms that dismisses alarms using an NFC tag.]]></string>
    <string name="help_configuration"><![CDATA[<h4>Configuration</h4>
    Open <b>Suntimes Alarms</b> and configure the alarm\'s <b>On Dismiss</b> challenge to <b>Scan NFC Tag</b>.
    <br/><br/>
    Any NFC tag may be used on first use, and that tag will be required for future alarms.
    <br/><br/>
    The NFC tag may be reassigned during an active alarm by scanning another tag at least 5 times.
    <br/><br/>
    The activity runs in configuration mode when started from the launcher; scanning a tag will (re)assign it for future use.
    ]]></string>

    <string name="dismiss_challenge_title">Scan NFC Tag</string>

    <string name="action_scantag">Scan Tag</string>
    <string name="summary_scantag">Place the device near NFC Tag.</string>

    <string name="label_saved_tag">Tag Assigned</string>
    <string name="label_right_tag">Alarm Dismissed</string>

    <string name="label_wrong_tag">Wrong tag!</string>
    <string name="summary_wrong_tag">Scan at least %s.</string>
    <plurals name="scanNumMoreTimes">
        <item quantity="one">%s more time</item>
        <item quantity="other">%s more times</item>
    </plurals>

    <string name="label_not_supported">Not Supported</string>
    <string name="summary_not_supported">Failed to detect NFC support.</string>

    <string name="action_dismiss">Dismiss</string>
    <string name="action_snooze">Snooze</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>



    <string name="label_configuration_mode">Configuration Mode</string>

</resources>