<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:id="@+id/layout_scantag" android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/layout_fabs"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">

            <ImageView android:id="@+id/icon" android:layout_gravity="center"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_nfc_192"
                android:layout_margin="16dp" tools:ignore="ContentDescription" />

            <TextView android:id="@+id/text_title"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/action_scantag" />

            <TextView android:id="@+id/text_summary"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/summary_scantag" />

        </LinearLayout>

        <LinearLayout android:id="@+id/layout_fabs" android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_scantag"
            app:layout_constraintBottom_toTopOf="@+id/bottombar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/snoozeButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_margin="4dp" android:visibility="visible"
                android:clickable="true" android:focusable="true"
                android:contentDescription="@string/action_snooze"
                app:srcCompat="?attr/icActionSnooze" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/dismissButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_margin="4dp" android:visibility="visible"
                android:clickable="true" android:focusable="true"
                app:backgroundTint="?attr/colorPrimary" app:rippleColor="?attr/colorAccent"
                android:contentDescription="@string/action_dismiss"
                app:srcCompat="?attr/icActionDismiss" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/helpButton" android:visibility="gone"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true" android:focusable="true"
                android:contentDescription="@string/action_help"
                app:srcCompat="?attr/icActionHelp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/aboutButton" android:visibility="gone"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true" android:focusable="true"
                android:contentDescription="@string/action_about"
                app:srcCompat="?attr/icActionAbout" />

            <!--<TextView android:id="@+id/dismissButton_label"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/action_dismiss"
                android:elevation="6dp"
                android:textSize="?attr/text_size_large"
                app:layout_anchor="@id/dismissButton"
                app:layout_anchorGravity="center"/>-->

        </LinearLayout>

        <LinearLayout android:id="@+id/bottombar"
            android:layout_width="match_parent" android:layout_height="32dp"
            android:orientation="horizontal" android:background="?attr/colorPrimary"
            android:layout_gravity="bottom" android:gravity="center_vertical|end"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView  android:textStyle="bold" android:textSize="?attr/text_size_tiny"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp" android:layout_marginLeft="12dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/label_configuration_mode" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

